--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -1,7 +1,8 @@
 name: Dart
 on:
- push:
-    branches: [ master ]
+  push:
+    branches:
+      - master
   pull_request:
     branches:
       - master
